--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8183
 management.endpoints.web.exposure.include=*
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.enabled=true
+spring.cloud.discovery.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id= true
+spring.cloud.gateway.discovery.locator.enabled= true
