--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ eureka.client.enabled=true
 spring.cloud.discovery.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 spring.cloud.gateway.discovery.locator.enabled= true
+
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds
+metrics.rollingStats.timeInMilliseconds=60000
+hystrix.threadpool.default.coreSize=10
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
+
+hystrix.command.inventory-by-ids.execution.isolation.thread.timeoutInMilliseconds=1500
+hystrix.command.inventory-by-ids.circuitBreaker.errorThresholdPercentage=50
+
+hystrix.command.catalog-by-sku.execution.isolation.thread.timeoutInMilliseconds=1500
+hystrix.command.catalog-by-sku.circuitBreaker.errorThresholdPercentage=50
+
+hystrix.command.catalog-by-id.execution.isolation.thread.timeoutInMilliseconds=1500
+hystrix.command.catalog-by-id.circuitBreaker.errorThresholdPercentage=50
