zipkin and delay limits

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.cloud.discovery.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 spring.cloud.gateway.discovery.locator.enabled= true
 
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
+
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds
-metrics.rollingStats.timeInMilliseconds=60000
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=60000
 hystrix.threadpool.default.coreSize=10
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=5000
